--- a/problem-b/index.html
+++ b/problem-b/index.html
@@ -5,9 +5,11 @@
   <title>Sharp Point Coffee</title>
   <!-- This stylesheet will somewhat "normalize" the styling across browsers -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
-
+  <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Raleway:ital,wght@0,300;1,300&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
   <nav>
     <ul>
@@ -21,7 +23,7 @@
       <h1>Sharp Point Coffee</h1>
       <p class="motto">Caffeinating sleepy Huskies since 2018</p>
     </div>
-  </header>  
+  </header>
   <main>
     <section id="menu"> 
       <div class="container">
